--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,8 @@
     "start": "react-scripts start"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "jwt-decode": "^4.0.0",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
